Reorder and test