@@ -12,32 +12,10 @@ buildscript {
 sourceSets {
     main {
         java {
-            srcDir 'core/'
-            srcDir 'base/'
-        }
-        resources {
-            srcDir 'Maps'
-            srcDir 'Chemins'
         }
     }
-}
-
-test{
-    testSrcDirs 'test/**'
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-    //heap size
-    minHeapSize = "756m"
-    maxHeapSize = "2048m"
-    // jvm args
-    jvmArgs '-XX:MaxPermSize=2048m'
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-    }
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
+    test{
+        java {
+        }
     }
 }
